--- a/index.html
+++ b/index.html
@@ -15,6 +15,20 @@
     
     <header class="header">
 
+        <div class="contenedor">
+            <div class="barra">
+                <a class="logo" href="index.html">
+                    <h1 class="logo__nombre no-margin centrar-texto">Blog<span class="logo__bold">DeCafé</span></h1>
+                </a>
+
+                <nav class="navegacion">
+                    <a href="nosotros.html" class="navegacion__enlace">Nosotros</a>
+                    <a href="cursos.html" class="navegacion__enlace">Cursos</a>
+                    <a href="contacto.html" class="navegacion__enlace">Contacto</a>
+                </nav>
+            </div>
+        </div>
+
         <div class="header__texto">
             <h2 class="no-margin">Blog de Café, cursos y consejos</h2>
             <p class="no-margin">Aprende de los mejores con las mejores técnicas</p>
@@ -22,5 +36,90 @@
 
     </header>
 
+    <div class="contenedor contenido-principal">
+        <main class="bloque">
+            <h3>Nuestro blog</h3>
+            <article class="entrada">
+                <div class="entrada__imagen">
+                    <img src="/img/blog1.jpg" alt="Imagen blog">
+                </div>
+
+                <div class="entrada__contenido">
+                    <h4 class="no-margin">Tipos de grande de café</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem vel adipisci consequatur aliquam consequuntur dignissimos iure unde nesciunt quaerat! Facilis maxime ipsum porro molestiae quaerat ad omnis voluptas consequuntur cupiditate. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem aspernatur accusamus minima debitis excepturi nam, temporibus fugiat, nisi natus esse impedit quos quidem optio nemo laborum expedita autem quia eius.</p>
+                    <a href="entrada.html" class="boton boton__primario">Leer Entrada</a>
+                </div>
+            </article>
+
+            <article class="entrada">
+                <div class="entrada__imagen">
+                    <img src="/img/blog2.jpg" alt="Imagen blog">
+                </div>
+
+                <div class="entrada__contenido">
+                    <h4 class="no-margin">Tipos de grande de café</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem vel adipisci consequatur aliquam consequuntur dignissimos iure unde nesciunt quaerat! Facilis maxime ipsum porro molestiae quaerat ad omnis voluptas consequuntur cupiditate. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem aspernatur accusamus minima debitis excepturi nam, temporibus fugiat, nisi natus esse impedit quos quidem optio nemo laborum expedita autem quia eius.</p>
+                    <a href="entrada.html" class="boton boton__primario">Leer Entrada</a>
+                </div>
+            </article>
+
+            <article class="entrada">
+                <div class="entrada__imagen">
+                    <img src="/img/blog3.jpg" alt="Imagen blog">
+                </div>
+
+                <div class="entrada__contenido">
+                    <h4 class="no-margin">Tipos de grande de café</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem vel adipisci consequatur aliquam consequuntur dignissimos iure unde nesciunt quaerat! Facilis maxime ipsum porro molestiae quaerat ad omnis voluptas consequuntur cupiditate. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem aspernatur accusamus minima debitis excepturi nam, temporibus fugiat, nisi natus esse impedit quos quidem optio nemo laborum expedita autem quia eius.</p>
+                    <a href="entrada.html" class="boton boton__primario">Leer Entrada</a>
+                </div>
+            </article>
+        </main>
+        <aside class="sidebar">
+            <h3>Nuestros cursos y talleres</h3>
+
+            <ul class="cursos no-padding">
+                <li class="widget-curso">
+                    <h4 class="no-margin">Técnicas de extracción de Café</h4>
+                    <p class="widget-curso__label">Precio:
+                        <span class="widget-curso__informacion">Gratis</span>
+                    </p>
+
+                    <p class="widget-curso__label">Cupo:
+                        <span class="widget-curso__informacion">20</span>
+                    </p>
+                    <a href="entrada.html" class="boton boton__secundario">Más Informacion</a>
+                </li>
+
+                <li class="widget-curso">
+                    <h4 class="no-margin">4 Recetas de Café para principante</h4>
+                    <p class="widget-curso__label">Precio:
+                        <span class="widget-curso__informacion">Gratis</span>
+                    </p>
+
+                    <p class="widget-curso__label">Cupo:
+                        <span class="widget-curso__informacion">20</span>
+                    </p>
+                    <a href="entrada.html" class="boton boton__secundario">Más Informacion</a>
+                </li>
+            </ul>
+        </aside>
+    </div>
+
+    <footer class="footer">
+        <div class="contenedor">
+            <div class="barra">
+                <a class="logo" href="index.html">
+                    <h1 class="logo__nombre no-margin centrar-texto">Blog<span class="logo__bold">DeCafé</span></h1>
+                </a>
+
+                <nav class="navegacion">
+                    <a href="nosotros.html" class="navegacion__enlace">Nosotros</a>
+                    <a href="cursos.html" class="navegacion__enlace">Cursos</a>
+                    <a href="contacto.html" class="navegacion__enlace">Contacto</a>
+                </nav>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
