--- a/cursos.html
+++ b/cursos.html
@@ -39,6 +39,66 @@
     <main class="contenedor">
         <h3 class="centrar-texto">Nuestros Próximos Cursos y Talleres</h3>
 
+        <div class="curso">
+            <div class="curso__imagen">
+                <img src="/img/curso1.jpg" alt="Imagen del curso">
+            </div>
+
+            <div class="curso__informacion">
+                <h4 class="no-margin">Técnicas de extracción de café</h4>
+                <p class="curso__label">Precio:
+                    <span class="curso__informacion">Gratis</span>
+                </p>
+
+                <p class="widget-curso__label">Cupo:
+                    <span class="widget-curso__informacion">20</span>
+                </p>
+                <p class="curso__descripcion">
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deserunt aspernatur eos velit vel quia, maiores alias dolores a tenetur commodi quis ipsa voluptatum iusto libero voluptatem expedita eum qui fugit? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Unde obcaecati inventore animi perspiciatis error possimus earum officiis aliquam vero, aperiam doloremque vitae temporibus voluptatum illum consequatur porro velit recusandae enim.
+                </p>
+            </div><!--.curso__informacion-->
+        </div><!--.curso-->
+
+        <div class="curso">
+            <div class="curso__imagen">
+                <img src="/img/curso2.jpg" alt="Imagen del curso">
+            </div>
+
+            <div class="curso__informacion">
+                <h4 class="no-margin">Taller para tostar y moles granos</h4>
+                <p class="curso__label">Precio:
+                    <span class="curso__informacion">Gratis</span>
+                </p>
+
+                <p class="widget-curso__label">Cupo:
+                    <span class="widget-curso__informacion">20</span>
+                </p>
+                <p class="curso__descripcion">
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deserunt aspernatur eos velit vel quia, maiores alias dolores a tenetur commodi quis ipsa voluptatum iusto libero voluptatem expedita eum qui fugit? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Unde obcaecati inventore animi perspiciatis error possimus earum officiis aliquam vero, aperiam doloremque vitae temporibus voluptatum illum consequatur porro velit recusandae enim.
+                </p>
+            </div><!--.curso__informacion-->
+        </div><!--.curso-->
+
+        <div class="curso">
+            <div class="curso__imagen">
+                <img src="/img/curso3.jpg" alt="Imagen del curso">
+            </div>
+
+            <div class="curso__informacion">
+                <h4 class="no-margin">4 Recetas de Café para principante</h4>
+                <p class="curso__label">Precio:
+                    <span class="curso__informacion">Gratis</span>
+                </p>
+
+                <p class="widget-curso__label">Cupo:
+                    <span class="widget-curso__informacion">20</span>
+                </p>
+                <p class="curso__descripcion">
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deserunt aspernatur eos velit vel quia, maiores alias dolores a tenetur commodi quis ipsa voluptatum iusto libero voluptatem expedita eum qui fugit? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Unde obcaecati inventore animi perspiciatis error possimus earum officiis aliquam vero, aperiam doloremque vitae temporibus voluptatum illum consequatur porro velit recusandae enim.
+                </p>
+            </div><!--.curso__informacion-->
+        </div><!--.curso-->
+
     </main>
 
     <footer class="footer">
