--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BlogDeCafé</title>
+    <meta name="description" content="Página web de blog de café">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -41,7 +42,7 @@
             <h3>Nuestro blog</h3>
             <article class="entrada">
                 <div class="entrada__imagen">
-                    <img src="/img/blog1.jpg" alt="Imagen blog">
+                    <img loading="lazy" src="/img/blog1.jpg" alt="Imagen blog">
                 </div>
 
                 <div class="entrada__contenido">
@@ -53,7 +54,7 @@
 
             <article class="entrada">
                 <div class="entrada__imagen">
-                    <img src="/img/blog2.jpg" alt="Imagen blog">
+                    <img loading="lazy" src="/img/blog2.jpg" alt="Imagen blog">
                 </div>
 
                 <div class="entrada__contenido">
@@ -65,7 +66,7 @@
 
             <article class="entrada">
                 <div class="entrada__imagen">
-                    <img src="/img/blog3.jpg" alt="Imagen blog">
+                    <img loading="lazy" src="/img/blog3.jpg" alt="Imagen blog">
                 </div>
 
                 <div class="entrada__contenido">
@@ -88,7 +89,7 @@
                     <p class="widget-curso__label">Cupo:
                         <span class="widget-curso__informacion">20</span>
                     </p>
-                    <a href="entrada.html" class="boton boton__secundario">Más Informacion</a>
+                    <a href="entrada.html" class="boton boton__secundario">Más Informacion acerca de nuestros cursos</a>
                 </li>
 
                 <li class="widget-curso">
@@ -100,7 +101,7 @@
                     <p class="widget-curso__label">Cupo:
                         <span class="widget-curso__informacion">20</span>
                     </p>
-                    <a href="entrada.html" class="boton boton__secundario">Más Informacion</a>
+                    <a href="entrada.html" class="boton boton__secundario">Más Informacion acerca de nuestros cursos</a>
                 </li>
             </ul>
         </aside>
