--- a/cursos.html
+++ b/cursos.html
@@ -65,7 +65,7 @@
             </div>
 
             <div class="curso__informacion">
-                <h4 class="no-margin">Taller para tostar y moles granos</h4>
+                <h4 class="no-margin">Taller para tostar y moler granos</h4>
                 <p class="curso__label">Precio:
                     <span class="curso__informacion">Gratis</span>
                 </p>
