--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 </div>
 
                 <div class="entrada__contenido">
-                    <h4 class="no-margin">Tipos de grande de café</h4>
+                    <h4 class="no-margin">Tipos de granos de café</h4>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem vel adipisci consequatur aliquam consequuntur dignissimos iure unde nesciunt quaerat! Facilis maxime ipsum porro molestiae quaerat ad omnis voluptas consequuntur cupiditate. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem aspernatur accusamus minima debitis excepturi nam, temporibus fugiat, nisi natus esse impedit quos quidem optio nemo laborum expedita autem quia eius.</p>
                     <a href="entrada.html" class="boton boton__primario">Leer Entrada</a>
                 </div>
@@ -58,7 +58,7 @@
                 </div>
 
                 <div class="entrada__contenido">
-                    <h4 class="no-margin">Tipos de grande de café</h4>
+                    <h4 class="no-margin">Tipos de granos de café</h4>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem vel adipisci consequatur aliquam consequuntur dignissimos iure unde nesciunt quaerat! Facilis maxime ipsum porro molestiae quaerat ad omnis voluptas consequuntur cupiditate. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem aspernatur accusamus minima debitis excepturi nam, temporibus fugiat, nisi natus esse impedit quos quidem optio nemo laborum expedita autem quia eius.</p>
                     <a href="entrada.html" class="boton boton__primario">Leer Entrada</a>
                 </div>
@@ -70,7 +70,7 @@
                 </div>
 
                 <div class="entrada__contenido">
-                    <h4 class="no-margin">Tipos de grande de café</h4>
+                    <h4 class="no-margin">Tipos de granos de café</h4>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem vel adipisci consequatur aliquam consequuntur dignissimos iure unde nesciunt quaerat! Facilis maxime ipsum porro molestiae quaerat ad omnis voluptas consequuntur cupiditate. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem aspernatur accusamus minima debitis excepturi nam, temporibus fugiat, nisi natus esse impedit quos quidem optio nemo laborum expedita autem quia eius.</p>
                     <a href="entrada.html" class="boton boton__primario">Leer Entrada</a>
                 </div>
